--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,33 @@ box-shadow:2px 2px 2px 2px grey;
 padding : 50px;
 width: 100%;
 margin-bottom: 50px
+font-family: Frank Ruhl Libre;
 
 }
 .jumbotron{
   background-color: yellow;
   text-align: center;
-  
+
+}
+
+.ppp{
+  background-color: #7FFFD4;
+}
+
+h2{
+  font-size: 25px;
+  font-family: inherit;
+}
+
+.mmm{
+  background-color: #F0FFFF
+  font-size: 30px;
+
+}
+
+.input{
+  width: 200%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
