--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ height: 600px;
 
 
 .ppp{
-  background-color: #7FFFD4;
+  background-color: #4CAF50; /* Green */
+  font-size: 25px;
 }
 
 h2{
@@ -36,11 +37,23 @@ padding-right: 0px;
     box-sizing: border-box;
 }
 
+.btn{
+  background-color: #4CAF50; /* Green */
+   border: none;
+   color: white;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+}
+
+
 .footer{
   background-color: white;
   font-style: italic;
   text-align: center;
-  font-color: red;
+  color: red;
   font-size: 35px;
 
 }
